--- a/.snippetsrc
+++ b/.snippetsrc
@@ -112,7 +112,7 @@ alias deleteall="deleteAll"
 alias deleteeverything="deleteAll"
 
 loadSnippets() {
-    grep -q '#<SNIPPETS>' "$HOME/.bashrc" 2>/dev/null || printf '%s\n' '#<SNIPPETS>' '[[ -f "$HOME/.snippetsrc" ]] && source "$HOME/.snippetsrc"' '#<SNIPPETS/>' >> "$HOME/.bashrc"
+    grep -q '#<SNIPPETS>' "$HOME/.bashrc" 2>/dev/null || printf '%s\n' '#<SNIPPETS>' '[[ -f "$HOME/.snippetsrc" ]] && source "$HOME/.snippetsrc"' '#</SNIPPETS>' >> "$HOME/.bashrc"
 }
 alias loadsnippets='loadSnippets'
 alias loadsnippetsrc='loadSnippets'
