--- a/.snippetsrc
+++ b/.snippetsrc
@@ -16,28 +16,64 @@ alias git-updatecurrentbranch='updateCurrentBranch'
 alias git-mergemaintocurrentbranch='updateCurrentBranch'
 alias git-getupdatesfrommain='updateCurrentBranch'
 
-[ -z "$USER_REPO_URL" ] && readonly USER_REPO_URL="https://raw.githubusercontent.com/judigot/user/main"
+# Original raw URL (kept for reference)
+# [ -z "$USER_REPO_URL" ] && readonly USER_REPO_URL="https://raw.githubusercontent.com/judigot/user/main"
+
+# Download user repo to temp directory, returns the path
+downloadUserRepoTemp() {
+    local tmp="/tmp/user-repo-$$"
+    local zip="/tmp/user-$$.zip"
+    local url="https://github.com/judigot/user/archive/refs/heads/main.zip"
+    
+    curl -sL "$url" -o "$zip" || { echo "Download failed"; return 1; }
+    unzip -q "$zip" -d "$tmp" || { echo "Extract failed"; rm "$zip"; return 1; }
+    rm "$zip"
+    
+    echo "$tmp/user-main"
+}
 
 syncDotfiles() {
+    local src="$1"
+    local cleanup=""
+    
+    if [ -z "$src" ]; then
+        src=$(downloadUserRepoTemp)
+        cleanup="$src"
+    fi
+    
+    # Original: curl -sL "$USER_REPO_URL/$file" -o "$HOME/$file"
     while IFS= read -r file; do
-        [ -n "$file" ] && curl -sL "$USER_REPO_URL/$file" -o "$HOME/$file"
-    done <<< "$(curl -sL "$USER_REPO_URL/DOTFILES")"
+        [ -n "$file" ] && cp "$src/$file" "$HOME/$file"
+    done < "$src/DOTFILES"
+    
+    [ -n "$cleanup" ] && rm -rf "$(dirname "$cleanup")"
     echo "Dotfiles synced to home directory."
 }
 alias syncdotfiles='syncDotfiles'
 
 syncIDEFiles() {
+    local src="$1"
+    local cleanup=""
+    
+    if [ -z "$src" ]; then
+        src=$(downloadUserRepoTemp)
+        cleanup="$src"
+    fi
+    
     local appdata="$HOME/AppData/Roaming"
     local cursor_user="$appdata/Cursor/User"
     local zed_dir="$appdata/Zed"
     
     mkdir -p "$cursor_user/snippets" "$zed_dir"
     
-    curl -sL "$USER_REPO_URL/ide/cursor/settings.jsonc" -o "$cursor_user/settings.json"
-    curl -sL "$USER_REPO_URL/ide/cursor/keybindings.jsonc" -o "$cursor_user/keybindings.json"
-    curl -sL "$USER_REPO_URL/ide/cursor/Master of Snippets.code-snippets" -o "$cursor_user/snippets/Master of Snippets.code-snippets"
-    curl -sL "$USER_REPO_URL/ide/zed/settings.jsonc" -o "$zed_dir/settings.json"
-    curl -sL "$USER_REPO_URL/ide/zed/keymap.jsonc" -o "$zed_dir/keymap.json"
+    # Original: curl -sL "$USER_REPO_URL/ide/cursor/..." -o "..."
+    cp "$src/ide/cursor/settings.jsonc" "$cursor_user/settings.json"
+    cp "$src/ide/cursor/keybindings.jsonc" "$cursor_user/keybindings.json"
+    cp "$src/ide/cursor/Master of Snippets.code-snippets" "$cursor_user/snippets/Master of Snippets.code-snippets"
+    cp "$src/ide/zed/settings.jsonc" "$zed_dir/settings.json"
+    cp "$src/ide/zed/keymap.jsonc" "$zed_dir/keymap.json"
+    
+    [ -n "$cleanup" ] && rm -rf "$(dirname "$cleanup")"
     echo "IDE files synced."
 }
 alias syncidefiles='syncIDEFiles'
@@ -45,6 +81,8 @@ alias synccursor='syncIDEFiles'
 alias synczed='syncIDEFiles'
 
 syncUbuntu() {
+    local src="$1"
+    local cleanup=""
     local wsl_root="//wsl.localhost/Ubuntu/root"
     local wsl_user="//wsl.localhost/Ubuntu/home/$USER"
     
@@ -53,15 +91,23 @@ syncUbuntu() {
         return 0
     fi
     
+    if [ -z "$src" ]; then
+        src=$(downloadUserRepoTemp)
+        cleanup="$src"
+    fi
+    
+    # Original: curl -sL "$USER_REPO_URL/$file" -o "$wsl_root/$file"
     while IFS= read -r file; do
-        [ -n "$file" ] && curl -sL "$USER_REPO_URL/$file" -o "$wsl_root/$file" 2>/dev/null
-    done <<< "$(curl -sL "$USER_REPO_URL/UBUNTU")"
+        [ -n "$file" ] && cp "$src/$file" "$wsl_root/$file" 2>/dev/null
+    done < "$src/UBUNTU"
     
     if [ -d "$wsl_user" ]; then
         while IFS= read -r file; do
-            [ -n "$file" ] && curl -sL "$USER_REPO_URL/$file" -o "$wsl_user/$file" 2>/dev/null
-        done <<< "$(curl -sL "$USER_REPO_URL/UBUNTU")"
+            [ -n "$file" ] && cp "$src/$file" "$wsl_user/$file" 2>/dev/null
+        done < "$src/UBUNTU"
     fi
+    
+    [ -n "$cleanup" ] && rm -rf "$(dirname "$cleanup")"
     echo "Ubuntu WSL synced."
 }
 alias syncubuntu='syncUbuntu'
@@ -82,9 +128,14 @@ alias sourceshellconfig='sourceShellConfig'
 alias reloadshell='sourceShellConfig'
 
 updateUserEnv() {
-    syncDotfiles
-    syncIDEFiles
-    syncUbuntu
+    local src=$(downloadUserRepoTemp)
+    
+    syncDotfiles "$src"
+    syncIDEFiles "$src"
+    syncUbuntu "$src"
+    
+    rm -rf "$(dirname "$src")"
+    
     sourceShellConfig
     echo "Configuration files updated and sourced successfully."
 }
