chore: comment out HOME environment variable in cursor settings.jsonc

--- a/ide/cursor/settings.jsonc
+++ b/ide/cursor/settings.jsonc
@@ -128,7 +128,7 @@
                 "source /c/Users/${env:USERNAME}/.bashrc; exec bash"
             ],
             "env": {
-                "HOME": "C:/apportable/Programming/msys64/home/${env:USERNAME}",
+                // "HOME": "C:/apportable/Programming/msys64/home/${env:USERNAME}",
                 "MSYSTEM": "MSYS",
                 "CHERE_INVOKING": "1"
             },
