chore: add comment explaining the use of -c option in cursor settings.jsonc

--- a/ide/cursor/settings.jsonc
+++ b/ide/cursor/settings.jsonc
@@ -124,6 +124,8 @@
             "args": [
                 "--login",
                 "-i",
+
+                // -c means run a command before starting the terminal
                 "-c",
                 "source /c/Users/${env:USERNAME}/.bashrc; exec bash"
             ],
