--- a/ide/zed/settings.jsonc
+++ b/ide/zed/settings.jsonc
@@ -25,12 +25,14 @@
     "shell": {
       "with_arguments": {
         "program": "C:/apportable/Programming/msys64/usr/bin/bash.exe",
-        "args": ["--login", "-i"],
+        "args": [
+          "--login",
+          "-i",
+        ],
       },
     },
     "env": {
       "PATH": "${env:PATH}:/c/apportable/Programming/PortableGit/cmd:/c/apportable/Programming/deno:/c/apportable/Programming/nvm:/c/apportable/Programming/nodejs:/c/apportable/Programming/nodejs/node_modules/npm/bin:/c/apportable/Programming/jdk/bin:/c/apportable/Programming/sqlite:/c/apportable/Programming/terraform:/c/apportable/Programming/pulumi/bin:/c/Users/${env:USERNAME}/AppData/Local/Programs/Microsoft VS Code/bin:/c/Program Files/Docker/Docker/resources/bin:/c/ProgramData/DockerDesktop/version-bin:",
-      "HOME": "C:/Users/Jude", // Uses the .bashrc located at C:/Users/${env:USERNAME}
       "MSYSTEM": "MSYS",
       "CHERE_INVOKING": "1", // Start the terminal in the directory from which it was launched
     },
