--- a/.snippetsrc
+++ b/.snippetsrc
@@ -106,14 +106,48 @@ syncUbuntu() {
         cleanup="$src"
     fi
     
-    # Original: curl -sL "$USER_REPO_URL/$file" -o "$wsl_root/$file"
+    # Function to sync a single entry
+    sync_entry() {
+        local entry="$1"
+        local dest_base="$2"
+        
+        # If entry starts with $HOME, it's a Windows path to sync to WSL home
+        if echo "$entry" | grep -q '^\$HOME'; then
+            # Expand $HOME and convert Windows path format
+            local win_path=$(echo "$entry" | sed "s|\$HOME|$HOME|g" | sed 's|\\|/|g')
+            # Extract just the relative path from $HOME (e.g., .ssh from $HOME\.ssh)
+            local rel_path=$(echo "$entry" | sed 's|^\$HOME[\\/]*||' | sed 's|\\|/|g')
+            local wsl_dest="$dest_base/$rel_path"
+            
+            # Copy from Windows to WSL
+            if [ -d "$win_path" ]; then
+                mkdir -p "$(dirname "$wsl_dest")" 2>/dev/null || true
+                cp -r "$win_path" "$wsl_dest" 2>/dev/null || true
+            elif [ -f "$win_path" ]; then
+                mkdir -p "$(dirname "$wsl_dest")" 2>/dev/null || true
+                cp "$win_path" "$wsl_dest" 2>/dev/null || true
+            fi
+        else
+            # Regular file from repo
+            if [ -d "$src/$entry" ]; then
+                mkdir -p "$dest_base/$(dirname "$entry")" 2>/dev/null || true
+                cp -r "$src/$entry" "$dest_base/$entry" 2>/dev/null || true
+            elif [ -f "$src/$entry" ]; then
+                mkdir -p "$dest_base/$(dirname "$entry")" 2>/dev/null || true
+                cp "$src/$entry" "$dest_base/$entry" 2>/dev/null || true
+            fi
+        fi
+    }
+    
+    # Sync to root first
     while IFS= read -r file; do
-        [ -n "$file" ] && cp "$src/$file" "$wsl_root/$file" 2>/dev/null
+        [ -n "$file" ] && sync_entry "$file" "$wsl_root"
     done < "$src/UBUNTU"
     
+    # Sync to user home if available
     if [ -d "$wsl_user" ]; then
         while IFS= read -r file; do
-            [ -n "$file" ] && cp "$src/$file" "$wsl_user/$file" 2>/dev/null
+            [ -n "$file" ] && sync_entry "$file" "$wsl_user"
         done < "$src/UBUNTU"
     fi
     
