refactor: Rename 'ai' function to 'useAI' and update ALIAS file
- Renamed the 'ai' function to 'useAI' for clarity in selecting AI options.
- Updated the ALIAS file to include new aliases for the 'useAI' function.

--- a/.snippetsrc
+++ b/.snippetsrc
@@ -458,7 +458,7 @@ claude() {
     command claude --plugin-dir ~/ai --plugin-dir . "$@"
 }
 
-ai() {
+useAI() {
     # Choose between Claude Code and Open Code using a beautiful terminal UI selector.
     # Choose numbers or use up and down arrows to select.
     # Ctrl + C to cancel.
