refactor: Update Open Code installation method in .snippetsrc
- Changed the installation method for Open Code from a curl command to a global npm installation command.

--- a/.snippetsrc
+++ b/.snippetsrc
@@ -422,7 +422,7 @@ loadSnippets() {
 }
 
 installOpenCode() {
-    curl -fsSL https://opencode.ai/install | bash
+    npm i -g opencode-ai
 }
 
 installClaudeCode() {
