chore: Remove .bash_profile and .profile; update .bashrc for improved sourcing
- Deleted .bash_profile and .profile as they are no longer needed.
- Updated .bashrc to prevent multiple sourcing and ensure proper environment setup.

--- a/.github/workflows/terminal-tests.yml
+++ b/.github/workflows/terminal-tests.yml
@@ -38,7 +38,7 @@ jobs:
         shell: pwsh
         run: |
           # Download key dotfiles
-          $files = @(".bash_profile", ".bashrc", ".profile", ".snippetsrc", "ALIAS")
+          $files = @(".bashrc", ".snippetsrc", "ALIAS")
           foreach ($file in $files) {
             $url = "https://raw.githubusercontent.com/judigot/user/main/$file"
             $dest = "$env:USERPROFILE\$file"
@@ -89,7 +89,7 @@ jobs:
       - name: Download key dotfiles
         shell: pwsh
         run: |
-          $files = @(".bash_profile", ".bashrc", ".profile", ".snippetsrc", "ALIAS")
+          $files = @(".bashrc", ".snippetsrc", "ALIAS")
           foreach ($file in $files) {
             $url = "https://raw.githubusercontent.com/judigot/user/main/$file"
             $dest = "$env:USERPROFILE\$file"
@@ -110,7 +110,7 @@ jobs:
 
       - name: Test dotfiles download
         run: |
-          files=".bash_profile .bashrc .profile .snippetsrc ALIAS"
+          files=".bashrc .snippetsrc ALIAS"
           for file in $files; do
             curl -fsSL "https://raw.githubusercontent.com/judigot/user/main/$file" -o "$HOME/$file"
             if [ -f "$HOME/$file" ]; then
